AdmissionPolicies/Policies/KubernetesVAP/ValidatingAdmissionPolicyBinding.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: blockservicewithnodeport
spec:
  policyName: blockservicewithnodeport
  validationActions: [Deny]
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: security-level
          operator: In
          values:
            - high
